cmake_minimum_required(VERSION 3.13)
project(LeetCode_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_CPP main.cpp PreDefs.hpp "Remove Duplicates from Sorted Array II.hpp" "Remove Duplicates from Sorted Array.hpp" "Search in Rotated Sorted Array.hpp" "Search in Rotated Sorted Array II.hpp" "Median of Two Sorted Arrays.hpp" "Longest Consecutive Sequence.hpp" 4Sum.hpp)